[lworld] AArch64: Deoptimization from return value stub fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      Running stress testing with -XX:+DeoptimizeALot triggers the following crash with several tests:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (0xe0000000), pid=3326739, tid=3326742
      # stop: SharedRuntime::generate_deopt_blob: last_Java_fp not cleared
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-19-0909217.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-19-0909217.tobias.hartmann.valhalla, mixed mode, tiered, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # v ~DeoptimizationBlob 0x0000fffd7859d7dc
      #

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~DeoptimizationBlob 0x0000fffd7859d800
      J 782 c1 jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance([Ljava/lang/Object;)Ljava/lang/Object; java.base@20-lworld4ea (148 bytes) @ 0x0000fffd7110be30 [0x0000fffd7110a240+0x0000000000001bf0]
      j java.lang.reflect.Constructor.newInstanceWithCaller([Ljava/lang/Object;ZLjava/lang/Class;)Ljava/lang/Object;+41 java.base@20-lworld4ea
      J 781 c1 java.lang.reflect.Constructor.newInstance([Ljava/lang/Object;)Ljava/lang/Object; java.base@20-lworld4ea (34 bytes) @ 0x0000fffd71109930 [0x0000fffd71109780+0x00000000000001b0]
      j compiler.lib.ir_framework.test.AbstractTest.createInvocationTarget(Ljava/lang/reflect/Method;)Ljava/lang/Object;+39
      j compiler.lib.ir_framework.test.CustomRunTest.<init>(Ljava/lang/reflect/Method;Lcompiler/lib/ir_framework/Warmup;Lcompiler/lib/ir_framework/Run;Ljava/util/List;Z)V+58
      j compiler.lib.ir_framework.test.TestVM.addCustomRunTest(Ljava/lang/reflect/Method;Lcompiler/lib/ir_framework/Run;)V+166
      j compiler.lib.ir_framework.test.TestVM.setupCheckedAndCustomRunTests()V+123
      j compiler.lib.ir_framework.test.TestVM.setupTests()V+71
      j compiler.lib.ir_framework.test.TestVM.start()V+1
      j compiler.lib.ir_framework.test.TestVM.main([Ljava/lang/String;)V+38
      v ~StubRoutines::call_stub 0x0000fffd784b016c

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: