8295655: [lworld] AArch64: Deoptimization from return value stub fails